src/objects/CLM_Prov_Id_Search__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prov Id Search</relationshipLabel>
        <relationshipName>Prov_Id_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Prov Id Search</relationshipLabel>
        <relationshipName>Prov_Id_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Prov_Id__c</fullName>
        <label>Prov Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Prov Id Search</label>
    <nameField>
        <label>Prov Id Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prov Id Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>